[package]
name = "import_pics"
version = "0.1.0"
authors = ["Martin Stancsics <martin.stancsics@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.15"
dialoguer = "0.7"
clap = { version = "2", features = ["yaml"] }
chrono = "0.4"